--- a/main.html
+++ b/main.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Screen Size</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #f0f8ff;
+    }
+    #sizeInfo {
+      padding: 20px;
+      border: 2px solid #4caf50;
+      border-radius: 10px;
+      background-color: #e8f5e9;
+      text-align: center;
+    }
+    h1 {
+      margin: 0;
+      font-size: 24px;
+      color: #333;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div id="sizeInfo">
+    <h1 id="dimensions">Width: 0 and Height: 0</h1>
+  </div>
 
+  <script>
+    function updateSize() {
+      const width = window.innerWidth;
+      const height = window.innerHeight;
+      const dimensionsElement = document.getElementById('dimensions');
+      dimensionsElement.textContent = `Width: ${width} and Height: ${height}`;
+    }
+
+    // Initial size update
+    updateSize();
+
+    // Update size on window resize
+    window.addEventListener('resize', updateSize);
+  </script>
 </body>
-
 </html>
